--- a/src/app/componentes/calculadora/calculadora.component.html
+++ b/src/app/componentes/calculadora/calculadora.component.html
@@ -1,4 +1,33 @@
 <div class="card">
       <app-pantalla></app-pantalla>
-      <app-teclado></app-teclado>
+      <div class="fila">
+            <app-boton valor="C"></app-boton>
+            <app-boton valor="("></app-boton>
+            <app-boton valor=")"></app-boton>
+            <app-boton valor="/"></app-boton>
+      </div>
+      <div class="fila">
+            <app-boton valor="7"></app-boton>
+            <app-boton valor="8"></app-boton>
+            <app-boton valor="9"></app-boton>
+            <app-boton valor="x"></app-boton>
+      </div>
+      <div class="fila">
+            <app-boton valor="4"></app-boton>
+            <app-boton valor="5"></app-boton>
+            <app-boton valor="6"></app-boton>
+            <app-boton valor="-"></app-boton>
+      </div>
+      <div class="fila">
+            <app-boton valor="1"></app-boton>
+            <app-boton valor="2"></app-boton>
+            <app-boton valor="3"></app-boton>
+            <app-boton valor="+"></app-boton>
+      </div>
+      <div class="fila">
+            <app-boton valor="0"></app-boton>
+            <app-boton valor="00"></app-boton>
+            <app-boton valor="."></app-boton>
+            <app-boton valor="="></app-boton>
+      </div>
 </div>
