--- a/src/app/componentes/boton/boton.component.html
+++ b/src/app/componentes/boton/boton.component.html
@@ -1,3 +1,6 @@
-<div [ngClass]="{boton:true, operador:soyOperador(valor),clear:soyClear(valor)}" (click)="handlerClick()">
+<div 
+[ngClass]="{boton:true, operador:soyOperador(valor),clear:soyClear(valor)}" 
+(click)="handlerClick()"
+>
       {{valor}}
 </div>
