--- a/src/app/componentes/calculadora/calculadora.component.html
+++ b/src/app/componentes/calculadora/calculadora.component.html
@@ -10,7 +10,7 @@
             <app-boton valor="7"(onClick)="agregarExpresion($event)"></app-boton>
             <app-boton valor="8"(onClick)="agregarExpresion($event)"></app-boton>
             <app-boton valor="9"(onClick)="agregarExpresion($event)"></app-boton>
-            <app-boton valor="x"(onClick)="agregarExpresion($event)"></app-boton>
+            <app-boton valor="*"(onClick)="agregarExpresion($event)"></app-boton>
       </div>
       <div class="fila">
             <app-boton valor="4"(onClick)="agregarExpresion($event)"></app-boton>
