--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-      background-color: rgb(129, 110, 151) !important;
+      background-color: #00a18c !important;
       padding: 5rem 7rem;
       height: 100vh;
       display: grid;
