--- a/src/app/componentes/calculadora/calculadora.component.css
+++ b/src/app/componentes/calculadora/calculadora.component.css
@@ -1,8 +1,8 @@
 .card{
       width: 20rem; height: 100%;
-      background-color: rgb(177, 177, 177);
-      border: solid 4px rgb(102, 101, 101);
-      border-radius: 25px;
+      background-color: rgba(255, 255, 255, 0.5);
+      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.19), 0px 6px 6px rgba(0, 0, 0, 0.23);
+      border-radius: 10px;
       padding: 1.5rem;
 }
 
