--- a/src/app/componentes/pantalla/pantalla.component.css
+++ b/src/app/componentes/pantalla/pantalla.component.css
@@ -1,9 +1,9 @@
 .pantalla{
-      background-color: rgb(88, 139, 104);
+      background-color: #293b55;
       border-radius: 12px;
-      height: 4rem;
-      border: solid 2px #5b5b5b;
-      color: chartreuse;
+      height: 8rem;
+      border: solid 2px #fcfcfcdc;
+      color: rgb(248, 248, 248);
       user-select: none;
       font-size: 35px;
       font-weight: bold;
@@ -11,6 +11,7 @@
       
       display: flex;
       justify-content: end;
-      align-items: center;
+      align-items: end;
       padding: 5px;
+      box-shadow: 2px 3px 25px rgba(114, 114, 114, 0.733);
 }
